--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "gsap": "^3.12.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
