--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "awerenessindeed1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<USERNAME>.github.io/<REPOSITORY_NAME>",
   "dependencies": {
     "cra-template": "^1.2.0",
     "firebase": "^11.1.0",
@@ -9,7 +10,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
