พยายามทำให้อยู่ใน search engine

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "awerenessindeed1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<USERNAME>.github.io/<REPOSITORY_NAME>",
+  "homepage": "https://NatchanonChanamo.github.io/Awareness-Indeed-1",
   "dependencies": {
     "cra-template": "^1.2.0",
     "firebase": "^11.1.0",
